here's ya pillow update github

--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
       - requests
       - eventlet
       - lxml
-      - Pillow==5.4.1
+      - Pillow
       - contextlib2
       - nltk
       - absl-py
